# matthias

./: .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
client/: README.md  index.html  package-lock.json  package.json
client/scripts/: upload.js
client/styles/: main.css
matthias/: __init__.py
media/: documents.json  images.json
server/: .env.example  README.md  pyproject.toml
server/app/: main.py  serve.py
server/app/routers/: root.py
server/matthias/: main.py  pyproject.toml
server/src/auth/: password.py
server/tests/: test_main.py
src/: images.json  key-generator.js  password.js
src/classes/: block.js  blockchain.js  key-pair.js  transaction.js
src/matthias/media/: documents.json  images.json
src/secrets/: dummy-keys.json
tests/: test_basic.py
