[project]
name = "matthias"
version = "0.1.0"
description = "image hosting"
authors = [
    {name = "herereadthis",email = "herereadthis.github@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.37.13,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]
urls = {repository = "https://github.com/herereadthis/matthias"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
